added real file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-test
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>lukes top 10 webs</h1>
+
+<a href="http://andkon.com">visit andkon</a>
+<br>
+<a href="http://abcandyou.com">visit abcandyou</a>
+<br>
+<a href="http://agame.com">visit agame</a>
+<br>
+<a href="http://www.wizard101.com">visit wiard101</a>
+<br>
+<a href="http://www.kizi.com">visit kizi</a>
+<br>
+
+<a href="http://firstinmath.com">visit firstinmath</a> 
+<img src="elf.jpg" width="104" height="142"> 
+<img src="elf10.gif" width="104" height="142"> 
+<table border="1">
+
+<tr>
+<td>Character Name</td>
+<td>Strength</td>
+<td>Dexterity</td>
+<td>Wisdom</td>
+</tr>
+
+<tr>
+<td>Picachu</td>
+<td>45</td>
+<td>48</td>
+<td>67</td>
+</tr>
+
+<tr>
+<td>Bilbo Baggins</td>
+<td>13</td>
+<td>99</td>
+<td>75</td>
+</tr>
+
+</table> 
+
+</body>
+</html> 
