--- a/practice.html
+++ b/practice.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
+<DOCTYPE! html>
 <html>
 <body>
 
-<p>
-<a href="default.asp">HTML Tutorial</a> This is a link to a page on this website.
-</p>
 
-<p>
-<a href="http://www.w3.org/">W3C</a> This is a link to a website on the World Wide Web.
-</p>
+<head>
+    <body bgcolor="#009900">
+</head>
 
-</body>
+
+<h1>Lukes Wepage </h1 
+
+
+
+
 </html>
+</body>
