--- a/practice.html
+++ b/practice.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+!DOCTYPE html>
 <html>
 <body>
 
@@ -8,10 +8,63 @@
 </head>
 
 
-<h1>Lukes Wepage </h1 
+		<h1>Lukes Wepage </h1 
+
+
+<p id="demo">
+JavaScript can react to events. Like the click of a button.
+</p>
+
+<script>
+function myFunction()
+{
+document.getElementById("demo").innerHTML="Hello JavaScript!";
+}
+</script>
+
+<button type="button" onclick="myFunction()">Click Me!</button>
+
+
+<img src="litlebigfoot.jpg"104"142"></body>
+ 
 
 
 
 
-</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/html>
 </body>
