set varybles,createda function called makeQusten

--- a/multiply.html
+++ b/multiply.html
@@ -2,13 +2,21 @@
 <html>
 <head>
 <script>
-var a = 2;
-var b = 3;
+var a = 0;
+var b = 0;
 var totalCorrect = 0;
 var totalIncorrect = 0;
-var realAnswer = a * b;
+var realAnswer = 0;
 var userAnswer = '';
 
+
+function makeQueston()
+{
+
+
+
+
+}
 </script>
 </head>
 <body>
