--- a/fossa.html
+++ b/fossa.html
@@ -14,5 +14,10 @@ That extra long tail helps the fossa balance<br>
 and jump from branch to branch.<br>
 It has retractable claws like those of a<br>
 a cat help it climb down a tree head first.</p>	
-</html>
+
+
+
+<img src=a.jpg>
+
 </body>
+</html>
