--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
-<body>
+<body bgcolor="#009900">
+
 
 <h1>lukes top 10 webs</h1>
 
@@ -42,6 +43,8 @@
 </tr>
 
 </table> 
+
+<a href="multiply.html"<To go to a mutiplying game click the link</a>
 
 </body>
 </html> 
