--- a/practice.html
+++ b/practice.html
@@ -1,4 +1,4 @@
-DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <body>
 
@@ -8,7 +8,13 @@ DOCTYPE html>
 </head>
 
 
-		<h1>Lukes Wepage </h1 
+		<h1>Lukes Wepage </h1>
+<p>Links</p> <br>
+<a href="division.html">Division Game</a>
+<br> 
+<a href="multiply.html">multiply Game</a>
+<br>
+<a href="addition.html">addition Game</a>
 
 
 <p id="demo">
@@ -23,6 +29,7 @@ document.getElementById("demo").innerHTML="Hello JavaScript!";
 </script>
 
 <button type="button" onclick="myFunction()">Click Me!</button>
+
 
 
 <img src="litlebigfoot.jpg"104"142"></body>
