--- a/multiply.html
+++ b/multiply.html
@@ -16,6 +16,9 @@ var totalNeeded = 10;
 
 <p>Multiply!</p>
 
+<button id="but_one">1</button>
+
+
 <p id="question_paragraph">Question:</p>
 
 <button id="but_0">0</button>
