--- a/progect_folder/chessstrad.html
+++ b/progect_folder/chessstrad.html
@@ -9,5 +9,29 @@
 then find a way to castle.The way to castle is to not move your
 rook or king then get all of the peices in between the king and
 the rook, and then you can if not knoced out yet you move your
-knight:x
+knight the rest I can not tell you.</p>
+<h1>Scores</h1>
+ <table border="1">
+
+<tr>
+<td>White</td>
+<td>Black</td>
+<td>Winner</td>
+</tr>
+
+<tr>
+<td>Luke Breslin</td>
+<td>Jim Breslin</td>
+<td>Jim Breslin</td>
+</tr>
+
+<tr>
+<td>Jim Roache</td>
+<td>Aldo Rodriquez</td>
+<td>Jim Roache</td>
+</tr>
+
+</table> 
+</html>
+</body>
 
