--- a/progect_folder/chessstrad.html
+++ b/progect_folder/chessstrad.html
@@ -20,15 +20,15 @@ knight the rest I can not tell you.</p>
 </tr>
 
 <tr>
-<td>Luke Breslin</td>
-<td>Jim Breslin</td>
-<td>Jim Breslin</td>
+<td>emily</td>
+<td>wylid</td>
+<td>wylid</td>
 </tr>
 
 <tr>
-<td>Jim Roache</td>
-<td>Aldo Rodriquez</td>
-<td>Jim Roache</td>
+<td>martin</td>
+<td>frailyn</td>
+<td>frailyn</td>
 </tr>
 
 </table> 
