--- a/progect_folder/chessstrad.html
+++ b/progect_folder/chessstrad.html
@@ -32,6 +32,6 @@ knight the rest I can not tell you.</p>
 </tr>
 
 </table> 
-</html>
-</body>
 
+<h1>2013 Speed Chess Tortamant Scores 2 round</>
+>p>Martin Vs. Abby seens Abby is not here i guess martin wins.<br>  Frances Vs. anere frances won in about ten seconds that is unbeleiveable.<br> jonathin vs. Juel Jonathin won.<br> asaur vs. tam-tu Asaur wins.<BR> Brian vs. Willison Brian wins.<br>  Joshua vs tatian Joshua wins.<br>  Robert vs. Mallipee Robert wins<br>  Robert 2 vs. wylid Wylid wins.  Thai vs. andres thai wins.  frailin vs. xxxxxxxx frailin wins.  jonathon vs. richard johnathon wins.<br>  Johnathon vs. migael johnathon wins.<br>  Adam vs. Randy Adam wins.<br>  Frances vs. Martin Martin Wins.<br>  israil vs. john john wins Asaur vs. willison willison wins havie vs brian havie wins.<br>  wylid vs. christian wylid wins.<br>  nate vs. Thai. nate wins adam vs. frances adam wins.<br>  Johnathon vs. willson a </html> </body> 
