--- a/progect_folder/chessstrad.html
+++ b/progect_folder/chessstrad.html
@@ -5,10 +5,10 @@
 
 
 
-<p>One of the best is to moveup all of your central pawns ,first.
-then find a way to castle.The way to castle is to not move your
-rook or king then get all of the peices in between the king and
-the rook, and then you can if not knoced out yet you move your
+<p>One of the best is to moveup all<br> of your central pawns ,first.
+then find a way to castle.The way to<br> castle is to not move your
+rook or king then get all of the peices<br> in between the king and
+the rook, and then you can if not knoced<br> out yet you move your<br>
 knight the rest I can not tell you.</p>
 <h1>Scores</h1>
  <table border="1">
@@ -31,7 +31,28 @@ knight the rest I can not tell you.</p>
 <td>frailyn</td>
 </tr>
 
+<tr>
+<td>robert</td>
+<td>Max</td>
+<td>Robert</td>
+</tr>
+<tr>
+<td>Abigale</td>
+<td>Pavla</td>
+<td>Pavla</td>
+</tr>
+<td>shay</td>
+<td>pamela</td>
+<td>shay</td>
+</tr>
+<tr>
+<td>John</td>
+<td>thai</td>
+<td>Thai</td>
+
 </table> 
 
-<h1>2013 Speed Chess Tortamant Scores 2 round</>
->p>Martin Vs. Abby seens Abby is not here i guess martin wins.<br>  Frances Vs. anere frances won in about ten seconds that is unbeleiveable.<br> jonathin vs. Juel Jonathin won.<br> asaur vs. tam-tu Asaur wins.<BR> Brian vs. Willison Brian wins.<br>  Joshua vs tatian Joshua wins.<br>  Robert vs. Mallipee Robert wins<br>  Robert 2 vs. wylid Wylid wins.  Thai vs. andres thai wins.  frailin vs. xxxxxxxx frailin wins.  jonathon vs. richard johnathon wins.<br>  Johnathon vs. migael johnathon wins.<br>  Adam vs. Randy Adam wins.<br>  Frances vs. Martin Martin Wins.<br>  israil vs. john john wins Asaur vs. willison willison wins havie vs brian havie wins.<br>  wylid vs. christian wylid wins.<br>  nate vs. Thai. nate wins adam vs. frances adam wins.<br>  Johnathon vs. willson a </html> </body> 
+
+
+
+
