--- a/math/multiply2.html
+++ b/math/multiply2.html
@@ -11,7 +11,7 @@ var userAnswer = '';
 var totalNeeded = 10;
 var quizStartTime = 0;
 var quizEndTime = 0;
-var quizTotalTime
+var quizTotalTime = 0;
 </script>
 </head>
 <body>
