--- a/progect_folder/chessstrad.html
+++ b/progect_folder/chessstrad.html
@@ -50,9 +50,34 @@ knight the rest I can not tell you.</p>
 <td>thai</td>
 <td>Thai</td>
 
+</tr>
+<tr>
+<td>Magie</td>
+<td>Ifael</td>
+<td>Ifael</td>
+</tr>
+<td>
+<tr>
+<tr>Nathenie</tr>
+<tr>Migael</tr>
+<tr>Nathenie</tr>
+</tr>
+
+
+
+
+
+
+
+
+
+
+
+
 </table> 
 
 
 
 
-
+</html>
+</body>
