word proplem added

--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
 
 <a href="multiply.html"<To go to a mutiplying game click the link</a>
 
+<h1>Word proplems</h1>
+<p>If a yard has length of 5 yds and a width of 7 yds. What is the area.</p>
+
 </body>
 </html> 
