adding word proplems

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body bgcolor="#009900">
 
 
-<h1>lukes top 10 webs</h1>
+<h1>lukes top 5 webs</h1>
 
 <a href="http://andkon.com">visit andkon</a>
 <br>
@@ -48,6 +48,6 @@
 
 <h1>Word proplems</h1>
 <p>If a yard has length of 5 yds and a width of 7 yds. What is the area.</p>
-
+<p>Sally made a sand castle. It has a volume 12.It has a
 </body>
 </html> 
