fixing up index

--- a/index.html
+++ b/index.html
@@ -19,35 +19,18 @@
 <a href="http://firstinmath.com">visit firstinmath</a> 
 <img src="elf.jpg" width="104" height="142"> 
 <img src="elf10.gif" width="104" height="142"> 
-<table border="1">
-
-<tr>
-<td>Character Name</td>
-<td>Strength</td>
-<td>Dexterity</td>
-<td>Wisdom</td>
-</tr>
-
-<tr>
-<td>Picachu</td>
-<td>45</td>
-<td>48</td>
-<td>67</td>
-</tr>
-
-<tr>
-<td>Bilbo Baggins</td>
-<td>13</td>
-<td>99</td>
-<td>75</td>
-</tr>
-
-</table> 
 
 <a href="multiply.html"<To go to a mutiplying game click the link</a>
 
 <h1>Word proplems</h1>
 <p>If a yard has length of 5 yds and a width of 7 yds. What is the area.</p>
-<p>Sally made a sand castle. It has a volume 12.It has a
+
+<p>Sally made a sand castle. It has a volume 12.It has a hight of 1.what is the 
+width and length of the sand castle.</p>
+
+
+
+
+
 </body>
 </html> 
