ame as last time

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-
-<body bgcolor="#009900">
-
-
-<h1>lukes top 5 webs</h1>
+<!DOCTYPE html>  <body bgcolor="#009900">  <h1>lukes top 5 wEBSITES!
 
 <a href="http://andkon.com">visit andkon</a>
 <br>
@@ -20,7 +15,7 @@
 <img src="elf.jpg" width="104" height="142"> 
 <img src="elf10.gif" width="104" height="142"> 
 
-<a href="multiply.html"<To go to a mutiplying game click the link</a>
+
 
 <h1>Word proplems</h1>
 <p>If a yard has length of 5 yds and a width of 7 yds. What is the area.</p>
